# rhythmbox-plugin-listenbrainz

./: .gitignore  LICENSE  NEWS.md  README.md  listenbrainz.plugin  listenbrainz.py  listenbrainz_client.py  listenbrainz_settings.py  listenbrainz_utils.py  meson.build
listenbrainz/: __init__.py  listenbrainz.plugin  listenbrainz.py  queue.py  settings.py  util.py
listenbrainz/schema/: org.gnome.rhythmbox.plugins.listenbrainz.gschema.xml
